--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,15 +12,16 @@ export(addGeneMetaData)
 export(addGeneSet)
 export(addGeneSetsInteractive)
 export(addImageAnnotation)
+export(addImageDir)
 export(addPointsBase)
 export(addSegmentationVariable)
 export(addSpatialTrajectory)
 export(add_models)
 export(add_models_to_shifted_projection_df)
-export(adjustDefaultInstructions)
 export(adjustDirectoryInstructions)
 export(adjustGeneSetDf)
 export(adjustGseaDf)
+export(alignImageAnnotation)
 export(allColorpalettes)
 export(allColorspectra)
 export(all_color_palettes)
@@ -28,6 +29,7 @@ export(all_color_spectra)
 export(are_all_area_or_dist)
 export(asGiotto)
 export(asHistologyImage)
+export(asHistologyImaging)
 export(asSPATA2)
 export(asSeurat)
 export(asSingleCellExperiment)
@@ -93,10 +95,10 @@ export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
 export(countImageAnnotationTags)
+export(createHistologyImaging)
 export(createImageAnnotations)
 export(createImageObject)
 export(createSegmentation)
-export(createSegmentation2)
 export(createSpatialSegmentation)
 export(createSpatialTrajectories)
 export(createTrajectories)
@@ -123,13 +125,14 @@ export(filterTrends)
 export(findMonocleClusters)
 export(findNearestNeighbourClusters)
 export(findSeuratClusters)
+export(flipAll)
 export(flipCoordinates)
 export(flipCoords)
 export(flipCoordsDf)
 export(flipImage)
-export(flipImageAndCoords)
 export(flipImageAnnotations)
 export(flipSpatialTrajectories)
+export(flip_coords_df)
 export(geom_point_fixed)
 export(geom_segment_fixed)
 export(geom_text_fixed)
@@ -193,8 +196,10 @@ export(getImageAnnotationScreeningDf)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
 export(getImageDims)
+export(getImageDir)
 export(getImageDirHighres)
 export(getImageDirLowres)
+export(getImageDirectories)
 export(getImageObject)
 export(getImageRange)
 export(getImageRaster)
@@ -228,6 +233,7 @@ export(getSparkxGenes)
 export(getSparkxResults)
 export(getSpataDf)
 export(getSpatialMethod)
+export(getSpatialTrajectories)
 export(getSpatialTrajectory)
 export(getSpatialTrajectoryIds)
 export(getTrajectory)
@@ -289,6 +295,7 @@ export(isFlipped)
 export(isGene)
 export(isGeneSet)
 export(isNumericVariable)
+export(isTrajectory)
 export(is_area)
 export(is_area_pixel)
 export(is_area_si)
@@ -316,6 +323,8 @@ export(linear_trends)
 export(loadCorrespondingCDS)
 export(loadCorrespondingSeuratObject)
 export(loadGeneSetDf)
+export(loadImage)
+export(loadImageDefault)
 export(loadImageHighres)
 export(loadImageLowres)
 export(loadSpataObject)
@@ -331,6 +340,7 @@ export(nCounts)
 export(nGenes)
 export(nImageAnnotations)
 export(nSpatialTrajectories)
+export(nTrajectories)
 export(nest_shifted_projection_df)
 export(normalize_smrd_projection_df)
 export(order_df)
@@ -412,6 +422,7 @@ export(printAutoencoderSummary)
 export(printDeaOverview)
 export(printDefaultInstructions)
 export(printGeneSetOverview)
+export(process_angle_justification)
 export(process_expand_input)
 export(process_ranges)
 export(project_on_trajectory)
@@ -423,10 +434,16 @@ export(renameFeatures)
 export(renameGroups)
 export(renameImageAnnotationId)
 export(renameSegments)
+export(resetImageJustification)
 export(resizingSegmentsGrob)
 export(resizingTextGrob)
-export(rotateCoords)
+export(rotateAll)
+export(rotateCoordinates)
+export(rotateCoordsDf)
 export(rotateImage)
+export(rotateImageAnnotations)
+export(rotateSpatialTrajectories)
+export(rotate_coords_df)
 export(runAutoencoderAssessment)
 export(runAutoencoderDenoising)
 export(runBayesSpaceClustering)
@@ -446,16 +463,20 @@ export(saveCorrespondingCDS)
 export(saveCorrespondingSeuratObject)
 export(saveGeneSetDf)
 export(saveSpataObject)
+export(scaleAll)
 export(scaleCoordinates)
 export(scaleCoordsDf)
+export(scaleImage)
 export(scaleImageAnnotations)
 export(scaleSpatialTrajectories)
 export(scale_color_add_on)
+export(scale_coords_df)
 export(setActiveExpressionMatrix)
 export(setBarcodes)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
+export(setDefault)
 export(setDefaultGrouping)
 export(setDefaultInstructions)
 export(setDefaultTrajectory)
@@ -465,12 +486,16 @@ export(setDirectoryInstructions)
 export(setFeatureDf)
 export(setImageAnnotation)
 export(setImageAnnotations)
+export(setImageDirDefault)
 export(setImageDirHighres)
 export(setImageDirLowres)
+export(setImageObject)
 export(setPcaDf)
 export(setPixelScaleFactor)
 export(setScaledMatrix)
 export(setSpataDir)
+export(setTrajectories)
+export(setTrajectory)
 export(setTsneDf)
 export(setUmapDf)
 export(shiftTrajectoryDf)
@@ -533,6 +558,7 @@ export(validUnitsOfLength)
 export(validateSpataObject)
 export(vselect)
 exportClasses(HistologyImage)
+exportClasses(HistologyImaging)
 exportClasses(ImageAnnotation)
 exportClasses(ImageAnnotationScreening)
 exportClasses(SpatialTrajectory)
@@ -544,6 +570,7 @@ exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
 exportMethods(asHistologyImage)
+exportMethods(asHistologyImaging)
 exportMethods(asSPATA2)
 exportMethods(asSpatialTrajectory)
 exportMethods(getImageAnnotationCenter)
