--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(adjustDirectoryInstructions)
 export(adjustGeneSetDf)
 export(adjustGseaDf)
 export(alignImageAnnotation)
+export(alignSpatialTrajectory)
 export(allColorpalettes)
 export(allColorspectra)
 export(all_color_palettes)
@@ -94,6 +95,7 @@ export(containsCNV)
 export(containsHistologyImage)
 export(containsImage)
 export(containsImageObject)
+export(containsPixelScaleFactor)
 export(countImageAnnotationTags)
 export(createHistologyImaging)
 export(createImageAnnotations)
@@ -295,6 +297,7 @@ export(isFlipped)
 export(isGene)
 export(isGeneSet)
 export(isNumericVariable)
+export(isSpatialTrajectory)
 export(isTrajectory)
 export(is_area)
 export(is_area_pixel)
