--- a/NAMESPACE
+++ b/NAMESPACE
@@ -192,6 +192,7 @@ export(getImageAnnotationAreaSize)
 export(getImageAnnotationBarcodes)
 export(getImageAnnotationCenter)
 export(getImageAnnotationCenterBcsp)
+export(getImageAnnotationDf)
 export(getImageAnnotationIds)
 export(getImageAnnotationRange)
 export(getImageAnnotationScreeningDf)
@@ -474,6 +475,7 @@ export(scaleImageAnnotations)
 export(scaleSpatialTrajectories)
 export(scale_color_add_on)
 export(scale_coords_df)
+export(section_dummy)
 export(setActiveExpressionMatrix)
 export(setBarcodes)
 export(setCnvResults)
