--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,6 +66,7 @@ Collate:
     'data.R'
     'deprecated_a-i.R'
     'deprecated_j-z.R'
+    'dev.R'
     'documentation-dummies.R'
     'e.R'
     'f.R'
