new hist img fns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -198,11 +198,14 @@ export(getImageAnnotationRange)
 export(getImageAnnotationScreeningDf)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
+export(getImageDf)
 export(getImageDims)
 export(getImageDir)
+export(getImageDirDefault)
 export(getImageDirHighres)
 export(getImageDirLowres)
 export(getImageDirectories)
+export(getImageInfo)
 export(getImageObject)
 export(getImageRange)
 export(getImageRaster)
@@ -495,6 +498,7 @@ export(setImageDirDefault)
 export(setImageDirHighres)
 export(setImageDirLowres)
 export(setImageObject)
+export(setImageOrigin)
 export(setPcaDf)
 export(setPixelScaleFactor)
 export(setScaledMatrix)
