--- a/NAMESPACE
+++ b/NAMESPACE
@@ -381,6 +381,7 @@ export(plotFourStates2)
 export(plotGeneDendrogram)
 export(plotGseaDotPlot)
 export(plotHistogram)
+export(plotIasBarplot)
 export(plotIasEvaluation)
 export(plotIasHeatmap)
 export(plotIasLineplot)
