distance to plotTrajectoryLineplot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -512,6 +512,8 @@ export(shiftTrajectoryDf)
 export(shift_for_evaluation)
 export(shift_for_plotting)
 export(shift_smrd_projection_df)
+export(showColorPalettes)
+export(showColorSpectra)
 export(showColors)
 export(showModels)
 export(smoothSpatially)
