--- a/NAMESPACE
+++ b/NAMESPACE
@@ -151,6 +151,7 @@ export(getChrRegionsDf)
 export(getCnvFeatureNames)
 export(getCnvGenesDf)
 export(getCnvResults)
+export(getCoordsCenter)
 export(getCoordsDf)
 export(getCoordsRange)
 export(getCountMatrix)
@@ -198,6 +199,7 @@ export(getImageAnnotationRange)
 export(getImageAnnotationScreeningDf)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
+export(getImageCenter)
 export(getImageDf)
 export(getImageDims)
 export(getImageDir)
