--- a/NAMESPACE
+++ b/NAMESPACE
@@ -265,6 +265,8 @@ export(ggpLayerFrameByImage)
 export(ggpLayerHorizonIAS)
 export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
+export(ggpLayerImgAnnBorder)
+export(ggpLayerImgAnnPointer)
 export(ggpLayerRect)
 export(ggpLayerSampleMask)
 export(ggpLayerScaleBarSI)
