--- a/NAMESPACE
+++ b/NAMESPACE
@@ -240,6 +240,7 @@ export(getSparkxGeneDf)
 export(getSparkxGenes)
 export(getSparkxResults)
 export(getSpataDf)
+export(getSpataDir)
 export(getSpatialMethod)
 export(getSpatialTrajectories)
 export(getSpatialTrajectory)
@@ -392,6 +393,7 @@ export(plotIasLineplot)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
+export(plotImagesGgplot)
 export(plotMosaicplot)
 export(plotOverview)
 export(plotPca)
