inner circles for img anns

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,7 +60,6 @@ export(assessTrajectoryTrendsCustomized2)
 export(attachUnit)
 export(attach_uni)
 export(bin_by_angle)
-export(bin_by_area)
 export(bin_by_expansion)
 export(bin_projection_df)
 export(buffer_area)
@@ -92,7 +91,7 @@ export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(compute_angle_between_two_points)
 export(containsCNV)
-export(containsHistologyImage)
+export(containsHistologyImaging)
 export(containsImage)
 export(containsImageObject)
 export(containsPixelScaleFactor)
@@ -186,16 +185,13 @@ export(getGroupNames)
 export(getGroupingOptions)
 export(getGseaDf)
 export(getGseaResults)
+export(getIasDf)
 export(getImage)
 export(getImageAnnotation)
 export(getImageAnnotationAreaDf)
-export(getImageAnnotationAreaSize)
-export(getImageAnnotationBarcodes)
 export(getImageAnnotationCenter)
-export(getImageAnnotationCenterBcsp)
 export(getImageAnnotationDf)
 export(getImageAnnotationIds)
-export(getImageAnnotationRange)
 export(getImageAnnotationScreeningDf)
 export(getImageAnnotationTags)
 export(getImageAnnotations)
@@ -213,6 +209,14 @@ export(getImageRange)
 export(getImageRaster)
 export(getImageRasterInfo)
 export(getImageSectionsByBarcode)
+export(getImgAnnArea)
+export(getImgAnnBarcodes)
+export(getImgAnnBorderDf)
+export(getImgAnnCenter)
+export(getImgAnnCenterBcsp)
+export(getImgAnnCenters)
+export(getImgAnnRange)
+export(getImgAnnSf)
 export(getInitiationInfo)
 export(getInitiationInput)
 export(getMatrix)
@@ -301,6 +305,7 @@ export(initiateSpataObject_CountMtr)
 export(initiateSpataObject_Empty)
 export(initiateSpataObject_Examples)
 export(initiateSpataObject_ExprMtr)
+export(intersect_polygons)
 export(isFeature)
 export(isFlipped)
 export(isGene)
@@ -579,6 +584,9 @@ exportClasses(HistologyImage)
 exportClasses(HistologyImaging)
 exportClasses(ImageAnnotation)
 exportClasses(ImageAnnotationScreening)
+exportClasses(SpatialMethod)
+exportClasses(SpatialSegment)
+exportClasses(SpatialSegmentation)
 exportClasses(SpatialTrajectory)
 exportClasses(SpatialTrajectoryScreening)
 exportClasses(Trajectory)
@@ -591,7 +599,8 @@ exportMethods(asHistologyImage)
 exportMethods(asHistologyImaging)
 exportMethods(asSPATA2)
 exportMethods(asSpatialTrajectory)
-exportMethods(getImageAnnotationCenter)
+exportMethods(getImgAnnCenter)
+exportMethods(getImgAnnCenters)
 exportMethods(getModelEvaluationDf)
 exportMethods(getResultsDf)
 exportMethods(getResultsVec)
