--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ export(createSpatialTrajectories)
 export(createTrajectories)
 export(createTrajectoryManually)
 export(create_model_df)
+export(cropSpataObject)
 export(discardExpressionMatrix)
 export(discardFeatures)
 export(discardGeneFeatures)
@@ -145,6 +146,7 @@ export(getBarcodeSpotDistance)
 export(getBarcodeSpotDistances)
 export(getBarcodes)
 export(getBarcodesInPolygon)
+export(getBarcodesInPolygonList)
 export(getCCD)
 export(getChrRegionsDf)
 export(getCnvFeatureNames)
@@ -451,7 +453,7 @@ export(relevelGroups)
 export(removeAnnotation)
 export(renameFeatures)
 export(renameGroups)
-export(renameImageAnnotationId)
+export(renameImgAnn)
 export(renameSegments)
 export(resetImageJustification)
 export(resizingSegmentsGrob)
@@ -533,6 +535,7 @@ export(spatial_methods)
 export(subsetByBarcodes)
 export(subsetByBarcodes_CountMtr)
 export(subsetByBarcodes_ExprMtr)
+export(subsetByGenes)
 export(subsetBySegment_CountMtr)
 export(subsetBySegment_ExprMtr)
 export(summarizeIAS)
