--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(getCoordsDf)
 export(getCoordsRange)
 export(getCountMatrix)
 export(getDeaGenes)
+export(getDeaLfcName)
 export(getDeaOverview)
 export(getDeaResultsDf)
 export(getDefault)
@@ -274,6 +275,7 @@ export(ggpLayerImage)
 export(ggpLayerImageAnnotation)
 export(ggpLayerImgAnnBorder)
 export(ggpLayerImgAnnPointer)
+export(ggpLayerLineplotAid)
 export(ggpLayerRect)
 export(ggpLayerSampleMask)
 export(ggpLayerScaleBarSI)
@@ -498,6 +500,7 @@ export(setBarcodes)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
+export(setDeaResultsDf)
 export(setDefault)
 export(setDefaultGrouping)
 export(setDefaultInstructions)
