--- a/NAMESPACE
+++ b/NAMESPACE
@@ -382,6 +382,7 @@ export(plotDeaLogFC)
 export(plotDeaPvalues)
 export(plotDeaSummary)
 export(plotDeaVolcano)
+export(plotDeaVolcano1v1)
 export(plotDendrogram)
 export(plotDendrogramCnv)
 export(plotDensityplot)
@@ -399,6 +400,7 @@ export(plotIasBarplot)
 export(plotIasEvaluation)
 export(plotIasHeatmap)
 export(plotIasLineplot)
+export(plotIasLineplotFitted)
 export(plotImage)
 export(plotImageAnnotations)
 export(plotImageGgplot)
