--- a/NAMESPACE
+++ b/NAMESPACE
@@ -529,6 +529,7 @@ export(setUmapDf)
 export(shiftTrajectoryDf)
 export(shift_for_evaluation)
 export(shift_for_plotting)
+export(shift_screening_df_to_long)
 export(shift_smrd_projection_df)
 export(showColorPalettes)
 export(showColorSpectra)
