misc function fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -221,6 +221,7 @@ export(getImgAnnCenter)
 export(getImgAnnCenterBcsp)
 export(getImgAnnCenters)
 export(getImgAnnIds)
+export(getImgAnnOutlineDf)
 export(getImgAnnRange)
 export(getImgAnnSf)
 export(getImgAnnSummaryDf)
