--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,7 @@ Collate:
     'b.R'
     'c.R'
     'check.R'
+    'cnv-analysis.R'
     'create.R'
     'd.R'
     'data.R'
@@ -75,6 +76,7 @@ Collate:
     'e.R'
     'f.R'
     'g.R'
+    'get-family.R'
     'getA-G.R'
     'getH-M.R'
     'getN-Z.R'
