--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,6 +157,7 @@ export(getFeatureNames)
 export(getFeatureValues)
 export(getFeatureVariables)
 export(getGeneCounts)
+export(getGeneDistMtr)
 export(getGeneMetaData)
 export(getGeneMetaDf)
 export(getGenePosDf)
@@ -227,6 +228,8 @@ export(getSegmentationNames)
 export(getSegmentationVariableNames)
 export(getSignatureEnrichment)
 export(getSmrdResultsDf)
+export(getSpCorCluster)
+export(getSpCorClusterNames)
 export(getSparkxGeneDf)
 export(getSparkxGenes)
 export(getSparkxResults)
@@ -242,6 +245,7 @@ export(getTrajectoryDf)
 export(getTrajectoryIds)
 export(getTrajectoryLength)
 export(getTrajectoryNames)
+export(getTrajectoryObject)
 export(getTrajectoryScreeningDf)
 export(getTrajectorySegmentDf)
 export(getTsneDf)
@@ -276,13 +280,6 @@ export(gradientToModelIAS)
 export(gradientToModelSTS)
 export(hlpr_add_old_coords)
 export(hlpr_compile_trajectory)
-<<<<<<< HEAD
-export(hlpr_filter_trend)
-export(hlpr_join_with_aes)
-export(hlpr_join_with_color_by)
-export(hlpr_name_models)
-=======
->>>>>>> f7196fe9dc51c1738b724567a2e437b9d4780e28
 export(hlpr_normalize_vctr)
 export(hlpr_one_distinct)
 export(hlpr_smooth)
@@ -353,6 +350,7 @@ export(plotBoxplot)
 export(plotClockplot)
 export(plotCnvHeatmap)
 export(plotCnvLineplot)
+export(plotCnvResults)
 export(plotDeaDotPlot)
 export(plotDeaGeneCount)
 export(plotDeaHeatmap)
@@ -440,13 +438,6 @@ export(runCnvAnalysis)
 export(runDEA)
 export(runDeAnalysis)
 export(runGSEA)
-<<<<<<< HEAD
-export(runGsea)
-export(runHclust)
-export(runHclustCnv)
-export(runHspa)
-=======
->>>>>>> f7196fe9dc51c1738b724567a2e437b9d4780e28
 export(runPca)
 export(runPca2)
 export(runSeuratClustering)
@@ -543,10 +534,6 @@ export(validModelNames)
 export(validPadjMethods)
 export(validPatternRecognitionMethods)
 export(validPlotTypes)
-<<<<<<< HEAD
-export(validateSpataObject)
-export(vselect)
-=======
 export(validPubExamples)
 export(validSpatialMethods)
 export(validUnits)
@@ -562,7 +549,6 @@ exportClasses(SpatialMethod)
 exportClasses(SpatialTrajectory)
 exportClasses(SpatialTrajectoryScreening)
 exportClasses(Trajectory)
->>>>>>> f7196fe9dc51c1738b724567a2e437b9d4780e28
 exportClasses(data_counts)
 exportClasses(default_instructions)
 exportClasses(dim_red)
