--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ export(createSpatialTrajectories)
 export(createTrajectoryManually)
 export(create_model_df)
 export(cropSpataObject)
+export(depr_info)
 export(discardExpressionMatrix)
 export(discardFeatures)
 export(discardGeneFeatures)
@@ -240,6 +241,7 @@ export(getSpatialTrajectories)
 export(getSpatialTrajectory)
 export(getSpatialTrajectoryIds)
 export(getStsDf)
+export(getTissueOutlineDf)
 export(getTrajectory)
 export(getTrajectoryDf)
 export(getTrajectoryIds)
