export helper, improve ggpLayerAxesSI

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -280,13 +280,44 @@ export(ggpLayerTrajectories)
 export(ggpLayerZoom)
 export(gradientToModelIAS)
 export(gradientToModelSTS)
+export(hlpr_add_barcode_suffix)
+export(hlpr_add_models)
 export(hlpr_add_old_coords)
-export(hlpr_compile_trajectory)
+export(hlpr_add_residuals)
+export(hlpr_add_residuals2)
+export(hlpr_add_residuals_customized)
+export(hlpr_add_residuals_diet)
+export(hlpr_adjust_legend_size)
+export(hlpr_assign_arguments)
+export(hlpr_breaks)
+export(hlpr_compare_samples)
+export(hlpr_display_subtitle)
+export(hlpr_display_title)
+export(hlpr_dist_mtr_to_df)
+export(hlpr_drop_all_na)
+export(hlpr_filter_trend)
+export(hlpr_gene_set_name)
+export(hlpr_geom_trajectory_fit)
+export(hlpr_image_add_on)
+export(hlpr_image_add_on2)
+export(hlpr_image_to_df)
+export(hlpr_join_with_aes)
+export(hlpr_join_with_color_by)
+export(hlpr_labs_add_on)
+export(hlpr_name_models)
+export(hlpr_normalize_imap)
 export(hlpr_normalize_vctr)
 export(hlpr_one_distinct)
+export(hlpr_process_spatial_correlation_cluster)
+export(hlpr_run_cnva_pca)
+export(hlpr_save_spata_object)
+export(hlpr_scatterplot)
 export(hlpr_smooth)
+export(hlpr_smooth_shiny)
 export(hlpr_subset_across)
+export(hlpr_summarize_residuals)
 export(hlpr_summarize_trajectory_df)
+export(hlpr_transfer_slot_content)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
 export(imageAnnotationScreening)
