--- a/NAMESPACE
+++ b/NAMESPACE
@@ -157,7 +157,6 @@ export(getFeatureNames)
 export(getFeatureValues)
 export(getFeatureVariables)
 export(getGeneCounts)
-export(getGeneDistMtr)
 export(getGeneMetaData)
 export(getGeneMetaDf)
 export(getGenePosDf)
@@ -229,8 +228,6 @@ export(getSegmentationNames)
 export(getSegmentationVariableNames)
 export(getSignatureEnrichment)
 export(getSmrdResultsDf)
-export(getSpCorCluster)
-export(getSpCorClusterNames)
 export(getSparkxGeneDf)
 export(getSparkxGenes)
 export(getSparkxResults)
@@ -247,7 +244,6 @@ export(getTrajectoryDf)
 export(getTrajectoryIds)
 export(getTrajectoryLength)
 export(getTrajectoryNames)
-export(getTrajectoryObject)
 export(getTrajectoryScreeningDf)
 export(getTrajectorySegmentDf)
 export(getTsneDf)
@@ -450,6 +446,7 @@ export(process_expand_input)
 export(process_ranges)
 export(project_on_trajectory)
 export(project_on_vector)
+export(protected_spatial_method_info_slots)
 export(protected_variable_names)
 export(relateToImageAnnotation)
 export(relevelGroups)
@@ -495,6 +492,7 @@ export(scale_coords_df)
 export(setActiveExpressionMatrix)
 export(setActiveMatrix)
 export(setBarcodes)
+export(setCCD)
 export(setCnvResults)
 export(setCoordsDf)
 export(setCountMatrix)
@@ -520,6 +518,9 @@ export(setPcaDf)
 export(setPixelScaleFactor)
 export(setScaledMatrix)
 export(setSpataDir)
+export(setSpatialMethod)
+export(setSpatialMethodInfo)
+export(setSpatialMethodSlot)
 export(setTissueOutline)
 export(setTrajectories)
 export(setTrajectory)
