--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,7 +90,10 @@ export(createSpatialTrajectories)
 export(createTrajectoryManually)
 export(create_model_df)
 export(cropSpataObject)
+export(currentSpata2Version)
+export(current_spata_version)
 export(depr_info)
+export(deprecatedInfo)
 export(discardExpressionMatrix)
 export(discardFeatures)
 export(discardGeneFeatures)
