--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ export(as_unit)
 export(assessAutoencoderOptions)
 export(attachUnit)
 export(attach_uni)
+export(barcodesToImageAnnotation)
 export(bin_by_angle)
 export(bin_by_expansion)
 export(bin_projection_df)
@@ -79,7 +80,6 @@ export(containsHistologyImaging)
 export(containsImage)
 export(containsImageObject)
 export(containsPixelScaleFactor)
-export(containsTissueOutline)
 export(countImageAnnotationTags)
 export(createHistologyImaging)
 export(createImageAnnotations)
@@ -320,6 +320,8 @@ export(hlpr_summarize_trajectory_df)
 export(hlpr_transfer_slot_content)
 export(hlpr_vector_projection)
 export(hlpr_widen_trajectory_df)
+export(identifyTissueOutline)
+export(identifyTissueSections)
 export(imageAnnotationScreening)
 export(imageAnnotationToSegmentation)
 export(include_tissue_outline)
@@ -367,6 +369,7 @@ export(loadImageLowres)
 export(loadSpataObject)
 export(mapImageAnnotationTags)
 export(mergeGroups)
+export(mergeTissueSections)
 export(model_formulas)
 export(nBarcodes)
 export(nCounts)
@@ -544,6 +547,8 @@ export(summarize_formulas)
 export(theme_lineplot_gradient)
 export(theme_ridgeplot_gradient)
 export(theme_trajectory_fit)
+export(tissueOutlineIdentified)
+export(tissueSectionsIdentfied)
 export(transformSeuratToSpata)
 export(transformSpataToCDS)
 export(transformSpataToSeurat)
