changes in S4 classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export(GeomPointFixed)
 export(GeomSegmentFixed)
 export(GeomTextFixed)
+export(VisiumLarge)
+export(VisiumSmall)
 export(addExpressionMatrix)
 export(addFeatures)
 export(addGeneFeatures)
@@ -592,6 +594,7 @@ exportClasses(SpatialMethod)
 exportClasses(SpatialTrajectory)
 exportClasses(SpatialTrajectoryScreening)
 exportClasses(Trajectory)
+exportClasses(Visium)
 exportClasses(data_counts)
 exportClasses(default_instructions)
 exportClasses(dim_red)
