--- a/NAMESPACE
+++ b/NAMESPACE
@@ -222,6 +222,7 @@ export(getPcaMtr)
 export(getPixelDf)
 export(getPixelScaleFactor)
 export(getProjectionDf)
+export(getPubExample)
 export(getResultsDf)
 export(getResultsVec)
 export(getSampleAreaSize)
