--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,6 +62,8 @@ Collate:
     'S4-generic-functions.R'
     'add.R'
     'adj-aZ.R'
+    'alignImageInteractive.R'
+    'alignImageInteractiveUI.R'
     'b.R'
     'c.R'
     'check.R'
@@ -79,6 +81,7 @@ Collate:
     'getH-M.R'
     'getN-Z.R'
     'h.R'
+    'html.R'
     'i.R'
     'imported-functions.R'
     'initiateSpataObject.R'
@@ -101,6 +104,7 @@ Collate:
     'runA-Z.R'
     's.R'
     'setA-Z.R'
+    'shinyModules.R'
     't.R'
     'u.R'
     'unused.R'
