--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,16 +11,22 @@ export(addGeneFeatures)
 export(addGeneMetaData)
 export(addGeneSet)
 export(addGeneSetsInteractive)
+export(addHistologyImage)
 export(addImageAnnotation)
 export(addImageDir)
 export(addPointsBase)
 export(addSpatialTrajectory)
+export(addTissueOutlineBase)
 export(add_dbscan_variable)
 export(add_models)
 export(add_models_to_shifted_projection_df)
 export(add_outline_variable)
 export(add_tissue_section_variable)
+export(add_wh)
+export(add_xy)
+export(alignImage)
 export(alignImageAnnotation)
+export(alignImageAuto)
 export(alignSpatialTrajectory)
 export(allColorpalettes)
 export(allColorspectra)
@@ -60,6 +66,7 @@ export(bin_by_angle)
 export(bin_by_expansion)
 export(bin_projection_df)
 export(buffer_area)
+export(centerTissueOutline)
 export(check_ias_input)
 export(check_image_annotation_ids)
 export(check_image_annotation_tags)
@@ -76,6 +83,7 @@ export(computeCnvByChrArm)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
 export(compute_angle_between_two_points)
+export(compute_img_scale_fct)
 export(containsCNV)
 export(containsHistologyImage)
 export(containsHistologyImaging)
@@ -83,7 +91,9 @@ export(containsImage)
 export(containsImageObject)
 export(containsPixelScaleFactor)
 export(countImageAnnotationTags)
+export(createHistologyImage)
 export(createHistologyImaging)
+export(createHistologyImagingNew)
 export(createImageAnnotations)
 export(createImageObject)
 export(createSegmentation)
@@ -92,8 +102,10 @@ export(createSpatialTrajectories)
 export(createTrajectoryManually)
 export(create_model_df)
 export(cropSpataObject)
+export(crop_image)
 export(currentSpata2Version)
 export(current_spata_version)
+export(default_image_transformations)
 export(depr_info)
 export(deprecatedInfo)
 export(discardExpressionMatrix)
@@ -108,6 +120,7 @@ export(downloadPubExample)
 export(downloadRawData)
 export(downloadSpataObject)
 export(downloadSpataObjects)
+export(emptyImageSlot)
 export(evaluate_model_fits)
 export(examineClusterResults)
 export(exchangeImage)
@@ -176,6 +189,10 @@ export(getGroupNames)
 export(getGroupingOptions)
 export(getGseaDf)
 export(getGseaResults)
+export(getHistoImageNames)
+export(getHistologyImage)
+export(getHistologyImageActive)
+export(getHistologyImageRef)
 export(getIasBinAreas)
 export(getIasDf)
 export(getIasExpansion)
@@ -201,6 +218,7 @@ export(getImageRange)
 export(getImageRaster)
 export(getImageRasterInfo)
 export(getImageSectionsByBarcode)
+export(getImageTransformations)
 export(getImgAnnArea)
 export(getImgAnnBarcodes)
 export(getImgAnnBorderDf)
@@ -244,6 +262,7 @@ export(getSpatialTrajectories)
 export(getSpatialTrajectory)
 export(getSpatialTrajectoryIds)
 export(getStsDf)
+export(getTissueOutlineCentroid)
 export(getTissueOutlineDf)
 export(getTrajectory)
 export(getTrajectoryDf)
@@ -255,6 +274,7 @@ export(getTrajectorySegmentDf)
 export(getTsneDf)
 export(getUmapDf)
 export(getVariableNames)
+export(getWindowSize)
 export(ggpInit)
 export(ggpLayerAxesClean)
 export(ggpLayerAxesSI)
@@ -514,6 +534,7 @@ export(setDefaultTrajectoryId)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
+export(setHistologyImage)
 export(setImageAnnotation)
 export(setImageAnnotations)
 export(setImageDirDefault)
@@ -521,6 +542,7 @@ export(setImageDirHighres)
 export(setImageDirLowres)
 export(setImageObject)
 export(setImageOrigin)
+export(setImageTransformations)
 export(setNormalizedMatrix)
 export(setOutlineVarName)
 export(setPcaDf)
@@ -534,6 +556,7 @@ export(setTrajectories)
 export(setTrajectory)
 export(setTsneDf)
 export(setUmapDf)
+export(shinyModuleZoomingServer)
 export(showColorPalettes)
 export(showColorSpectra)
 export(showColors)
@@ -549,6 +572,7 @@ export(summarize_formulas)
 export(theme_lineplot_gradient)
 export(theme_ridgeplot_gradient)
 export(theme_trajectory_fit)
+export(theme_transparent)
 export(tissueOutlineIdentified)
 export(tissueSectionsIdentfied)
 export(transformSeuratToSpata)
@@ -558,6 +582,8 @@ export(transform_area_si_to_pixel)
 export(transform_area_si_to_pixels)
 export(transform_dist_si_to_pixel)
 export(transform_dist_si_to_pixels)
+export(transform_image)
+export(transform_outline)
 export(transform_pixel_to_area_si)
 export(transform_pixel_to_dist_si)
 export(transform_pixels_to_area_si)
@@ -589,6 +615,7 @@ export(validUnitsOfLength)
 export(vselect)
 exportClasses(HistologyImage)
 exportClasses(HistologyImaging)
+exportClasses(HistologyImagingNew)
 exportClasses(ImageAnnotation)
 exportClasses(ImageAnnotationScreening)
 exportClasses(SpatialMethod)
@@ -601,19 +628,49 @@ exportClasses(default_instructions)
 exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
+exportMethods(addHistologyImage)
+exportMethods(addTissueOutlineBase)
+exportMethods(alignImage)
+exportMethods(alignImageAuto)
 exportMethods(asHistologyImage)
 exportMethods(asHistologyImaging)
 exportMethods(asSPATA2)
+exportMethods(centerTissueOutline)
+exportMethods(containsImage)
+exportMethods(emptyImageSlot)
+exportMethods(getHistoImageNames)
+exportMethods(getHistologyImage)
+exportMethods(getHistologyImageActive)
+exportMethods(getHistologyImageRef)
+exportMethods(getImage)
+exportMethods(getImageCenter)
+exportMethods(getImageDims)
+exportMethods(getImageRange)
+exportMethods(getImageRaster)
+exportMethods(getImageTransformations)
 exportMethods(getImgAnnCenter)
 exportMethods(getImgAnnCenters)
 exportMethods(getModelEvaluationDf)
+exportMethods(getPixelDf)
 exportMethods(getResultsDf)
 exportMethods(getResultsVec)
+exportMethods(getTissueOutlineCentroid)
+exportMethods(getTissueOutlineDf)
+exportMethods(getWindowSize)
+exportMethods(ggpLayerImage)
+exportMethods(ggpLayerTissueOutline)
+exportMethods(identifyTissueOutline)
+exportMethods(loadImage)
 exportMethods(plotClockplot)
+exportMethods(plotImage)
+exportMethods(plotImageGgplot)
+exportMethods(plotImagesGgplot)
 exportMethods(plotOverview)
 exportMethods(plotSurface)
 exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
+exportMethods(setHistologyImage)
+exportMethods(setImageTransformations)
 exportMethods(show)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
