scale factor integration

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -62,8 +62,6 @@ Collate:
     'S4-generic-functions.R'
     'add.R'
     'adj-aZ.R'
-    'alignImageInteractive.R'
-    'alignImageInteractiveUI.R'
     'b.R'
     'c.R'
     'check.R'
@@ -73,6 +71,7 @@ Collate:
     'deprecated_a-i.R'
     'deprecated_j-z.R'
     'dev.R'
+    'devImaging.R'
     'documentation-dummies.R'
     'e.R'
     'f.R'
