--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,13 +5,14 @@ export(GeomSegmentFixed)
 export(GeomTextFixed)
 export(VisiumLarge)
 export(VisiumSmall)
+export(activateHistoImage)
 export(addExpressionMatrix)
 export(addFeatures)
 export(addGeneFeatures)
 export(addGeneMetaData)
 export(addGeneSet)
 export(addGeneSetsInteractive)
-export(addHistologyImage)
+export(addHistoImage)
 export(addImageAnnotation)
 export(addImageDir)
 export(addPointsBase)
@@ -27,6 +28,7 @@ export(add_xy)
 export(alignImage)
 export(alignImageAnnotation)
 export(alignImageAuto)
+export(alignImageInteractive)
 export(alignSpatialTrajectory)
 export(allColorpalettes)
 export(allColorspectra)
@@ -82,18 +84,22 @@ export(color_vector)
 export(computeCnvByChrArm)
 export(computeGeneMetaData)
 export(computeGeneMetaData2)
+export(computePixelScaleFactor)
 export(compute_angle_between_two_points)
 export(compute_img_scale_fct)
+export(containsCCD)
 export(containsCNV)
 export(containsHistologyImage)
 export(containsHistologyImaging)
 export(containsImage)
 export(containsImageObject)
+export(containsMethod)
 export(containsPixelScaleFactor)
 export(countImageAnnotationTags)
-export(createHistologyImage)
+export(createHistoImage)
+export(createHistoImaging)
+export(createHistoImagingVisium)
 export(createHistologyImaging)
-export(createHistologyImagingNew)
 export(createImageAnnotations)
 export(createImageObject)
 export(createSegmentation)
@@ -120,6 +126,7 @@ export(downloadPubExample)
 export(downloadRawData)
 export(downloadSpataObject)
 export(downloadSpataObjects)
+export(emptyAllImageSlots)
 export(emptyImageSlot)
 export(evaluate_model_fits)
 export(examineClusterResults)
@@ -189,10 +196,10 @@ export(getGroupNames)
 export(getGroupingOptions)
 export(getGseaDf)
 export(getGseaResults)
+export(getHistoImage)
+export(getHistoImageActive)
 export(getHistoImageNames)
-export(getHistologyImage)
-export(getHistologyImageActive)
-export(getHistologyImageRef)
+export(getHistoImageRef)
 export(getIasBinAreas)
 export(getIasDf)
 export(getIasExpansion)
@@ -246,6 +253,7 @@ export(getResultsVec)
 export(getSampleAreaSize)
 export(getSampleName)
 export(getSampleNames)
+export(getScaleFactor)
 export(getSegmentDf)
 export(getSegmentNames)
 export(getSegmentationNames)
@@ -279,6 +287,7 @@ export(ggpInit)
 export(ggpLayerAxesClean)
 export(ggpLayerAxesSI)
 export(ggpLayerColorGroupScale)
+export(ggpLayerCoords)
 export(ggpLayerEncirclingGroups)
 export(ggpLayerEncirclingIAS)
 export(ggpLayerFixFrame)
@@ -355,6 +364,7 @@ export(initiateSpataObject_Empty)
 export(initiateSpataObject_Examples)
 export(initiateSpataObject_ExprMtr)
 export(intersect_polygons)
+export(isDirVisium)
 export(isFeature)
 export(isFlipped)
 export(isGene)
@@ -477,6 +487,7 @@ export(project_on_trajectory)
 export(project_on_vector)
 export(protected_spatial_method_info_slots)
 export(protected_variable_names)
+export(read_coords_visium)
 export(relateToImageAnnotation)
 export(relevelGroups)
 export(renameFeatures)
@@ -534,7 +545,7 @@ export(setDefaultTrajectoryId)
 export(setDenoisedMatrix)
 export(setDirectoryInstructions)
 export(setFeatureDf)
-export(setHistologyImage)
+export(setHistoImage)
 export(setImageAnnotation)
 export(setImageAnnotations)
 export(setImageDirDefault)
@@ -547,6 +558,7 @@ export(setNormalizedMatrix)
 export(setOutlineVarName)
 export(setPcaDf)
 export(setPixelScaleFactor)
+export(setScaleFactor)
 export(setScaledMatrix)
 export(setSpataDir)
 export(setSpatialMethod)
@@ -613,9 +625,10 @@ export(validUnitsOfArea)
 export(validUnitsOfAreaSI)
 export(validUnitsOfLength)
 export(vselect)
+exportClasses(HistoImage)
+exportClasses(HistoImaging)
 exportClasses(HistologyImage)
 exportClasses(HistologyImaging)
-exportClasses(HistologyImagingNew)
 exportClasses(ImageAnnotation)
 exportClasses(ImageAnnotationScreening)
 exportClasses(SpatialMethod)
@@ -628,20 +641,28 @@ exportClasses(default_instructions)
 exportClasses(dim_red)
 exportClasses(spata2)
 exportClasses(spatial_trajectory)
-exportMethods(addHistologyImage)
+exportMethods(activateHistoImage)
+exportMethods(addHistoImage)
 exportMethods(addTissueOutlineBase)
 exportMethods(alignImage)
 exportMethods(alignImageAuto)
+exportMethods(alignImageInteractive)
 exportMethods(asHistologyImage)
 exportMethods(asHistologyImaging)
 exportMethods(asSPATA2)
 exportMethods(centerTissueOutline)
+exportMethods(computePixelScaleFactor)
+exportMethods(containsCCD)
 exportMethods(containsImage)
+exportMethods(containsMethod)
+exportMethods(emptyAllImageSlots)
 exportMethods(emptyImageSlot)
+exportMethods(getCCD)
+exportMethods(getCoordsDf)
+exportMethods(getHistoImage)
+exportMethods(getHistoImageActive)
 exportMethods(getHistoImageNames)
-exportMethods(getHistologyImage)
-exportMethods(getHistologyImageActive)
-exportMethods(getHistologyImageRef)
+exportMethods(getHistoImageRef)
 exportMethods(getImage)
 exportMethods(getImageCenter)
 exportMethods(getImageDims)
@@ -652,11 +673,15 @@ exportMethods(getImgAnnCenter)
 exportMethods(getImgAnnCenters)
 exportMethods(getModelEvaluationDf)
 exportMethods(getPixelDf)
+exportMethods(getPixelScaleFactor)
 exportMethods(getResultsDf)
 exportMethods(getResultsVec)
+exportMethods(getScaleFactor)
+exportMethods(getSpatialMethod)
 exportMethods(getTissueOutlineCentroid)
 exportMethods(getTissueOutlineDf)
 exportMethods(getWindowSize)
+exportMethods(ggpLayerCoords)
 exportMethods(ggpLayerImage)
 exportMethods(ggpLayerTissueOutline)
 exportMethods(identifyTissueOutline)
@@ -669,8 +694,9 @@ exportMethods(plotOverview)
 exportMethods(plotSurface)
 exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
-exportMethods(setHistologyImage)
+exportMethods(setHistoImage)
 exportMethods(setImageTransformations)
+exportMethods(setScaleFactor)
 exportMethods(show)
 import(SingleCellExperiment)
 import(SummarizedExperiment)
