methods for spata2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(GeomTextFixed)
 export(VisiumLarge)
 export(VisiumSmall)
 export(activateImage)
+export(activeImage)
 export(addExpressionMatrix)
 export(addFeatures)
 export(addGeneFeatures)
@@ -155,6 +156,7 @@ export(flip_coords_df)
 export(geom_point_fixed)
 export(geom_segment_fixed)
 export(geom_text_fixed)
+export(getActive)
 export(getActiveExpressionMatrixName)
 export(getActiveMatrixName)
 export(getAutoencoderAssessment)
@@ -373,6 +375,7 @@ export(initiateSpataObject_CountMtr)
 export(initiateSpataObject_Empty)
 export(initiateSpataObject_Examples)
 export(initiateSpataObject_ExprMtr)
+export(initiateSpataObject_Visium)
 export(intersect_polygons)
 export(isDirVisium)
 export(isFeature)
@@ -504,6 +507,7 @@ export(read_coords_visium)
 export(registerImage)
 export(relateToImageAnnotation)
 export(relevelGroups)
+export(removeImage)
 export(renameFeatures)
 export(renameGroups)
 export(renameImgAnn)
@@ -680,6 +684,7 @@ exportMethods(containsTissueOutline)
 exportMethods(exclude)
 exportMethods(excludeArtefacts)
 exportMethods(excludeTissueFragments)
+exportMethods(getActive)
 exportMethods(getCCD)
 exportMethods(getCoordsDf)
 exportMethods(getHistoImage)
@@ -724,6 +729,7 @@ exportMethods(plotSurface)
 exportMethods(plotSurfaceIAS)
 exportMethods(plotVolcano)
 exportMethods(registerImage)
+exportMethods(removeImage)
 exportMethods(setHistoImage)
 exportMethods(setImageTransformations)
 exportMethods(setScaleFactor)
